app/assets/styles/base/_utilities.css
/* .mh-16 {
    padding-left: 16px;
    padding-right: 16px;
} */

* {
    /* border: none !important; */
}

.border {
    &--light {
        border: 1px solid #EAEAEA;
    }

    &--themeCol {
        border: 1px solid #5938FF;
    }
}

.mb-20 {
    margin-bottom: 20px;
}

.mb-100 {
    margin-bottom: 140px;
}

.mt-none {
    margin-top: 0;
}

.mb-none {
    margin-bottom: 0;
}

.p-20 {
    padding: 30px;
}

.bg--light {
    background-color: #f8f5ff;
}

.bg--w {
    background-color: #fff;
}

.no-mt {
    margin-top: 0;
}

.move-upwards {
    transform: translateY(-40px);
}

.js-no-scroll {
    overflow: hidden;
}

.ph-small {
    padding: 0 32px;
}

div#page {
    opacity: 1;
}

#black-home-overlay{
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 600;
    /* visibility: hidden;
    opacity: 0; */
    background-color: #fff;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: all 1.5s;
}

#black-home-overlay.fadeOut {
    visibility: hidden;
    opacity: 0;
}

